# curso-python-avanzado

./: .env.example  .gitignore  README.md  pyproject.toml
docs/clase_00/: 01_guia_setup.md
docs/clase_01/: 01_conceptos.md  02_lab_guide.md
docs/clase_02/: 01_conceptos.md  02_lab_guide.md
docs/clase_03/: 01_conceptos.md  02_lab_guide.md
docs/clase_04/: 01_conceptos.md  02_lab_guide.md
docs/clase_05/: 01_conceptos.md  02_lab_guide.md
docs/clase_06/: 01_conceptos.md  02_lab_guide.md
docs/clase_07/: 01_conceptos.md  02_lab_guide.md
docs/clase_08/: 01_conceptos.md  02_lab_guide.md
docs/clase_09/: 01_conceptos.md  02_lab_guide.md
docs/clase_10/: 01_conceptos.md  02_lab_guide.md
docs/clase_11/: 01_conceptos.md  02_lab_guide.md
docs/clase_12/: 01_conceptos.md  02_lab_guide.md
docs/clase_13/: 01_conceptos.md  02_lab_guide.md
scripts/clase_00/: verificar_entorno.py
scripts/clase_01/: demo_weather.py  ejercicios_clase_01.py
scripts/clase_02/: demo_proyecto.py  ejercicios_clase_02.py
scripts/clase_03/: 02_anyio_taskgroup_resilience.py  demo_proyecto.py  ejercicios_clase_03.py
scripts/clase_04/: demo_proyecto.py  ejercicios_clase_04.py
scripts/clase_05/: demo_proyecto.py  ejercicios_clase_05.py
scripts/clase_06/: demo_proyecto.py  ejercicios_clase_06.py
scripts/clase_07/: demo_proyecto.py  ejercicios_clase_07.py
scripts/clase_08/: demo_proyecto.py  ejercicios_clase_08.py
scripts/clase_09/: demo_proyecto.py  ejercicios_clase_09.py
scripts/clase_10/: demo_proyecto.py  ejercicios_clase_10.py
scripts/clase_11/: demo_proyecto.py  (+1 more)
(+176 files in other folders)
