[project]
name = "pycommute"
version = "0.1.0"
description = "Asesor de movilidad inteligente — curso Python Pro"
requires-python = ">=3.12"
dependencies = [
    # Clase 1 — cliente HTTP y variables de entorno
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Clase 3 — resiliencia profesional
    "loguru>=0.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    # Clase 5 — concurrencia estructurada
    "anyio>=4.4",
    # Clase 8-9 — contratos entre capas
    "pydantic>=2.12.5",
    # Clase 10 — IA cloud
    "google-genai>=1.69.0",
    # Clase 11 — IA local
    "ollama>=0.6.1",
    # Clase 12 — API REST
    "fastapi[standard]>=0.111",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    # Clase 1 — test runner y linter
    "pytest>=8.2",
    "ruff>=0.5",
    # Clase 4 — mocking pythonic
    "pytest-mock>=3.14",
    # Clase 6 — demo de profiling con EmailStr
    "email-validator>=2.3.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pycommute"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
